# nexora

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
crates/nexora-audit/: Cargo.toml
crates/nexora-audit/src/: category.rs  entry.rs  filter.rs  lib.rs  logger.rs
crates/nexora-auth/: Cargo.toml
crates/nexora-auth/src/: handler.rs  lib.rs  password.rs  store.rs  token.rs  users.rs
crates/nexora-auth/src/mfa/: mod.rs  totp.rs
crates/nexora-auth/src/sso/: config.rs  error.rs  mod.rs  oidc.rs  saml.rs  session.rs
crates/nexora-auth/src/webauthn/: mod.rs
crates/nexora-benchmarks/: Cargo.toml
crates/nexora-benchmarks/benches/: suites.rs
crates/nexora-benchmarks/src/: lib.rs  suites.rs
crates/nexora-billing/: Cargo.toml
crates/nexora-billing/src/: handler.rs  lib.rs  store.rs  types.rs
crates/nexora-cluster/: Cargo.toml
crates/nexora-cluster/src/: handler.rs  lib.rs  manager.rs  types.rs
crates/nexora-core/: Cargo.toml
crates/nexora-core/src/: lib.rs
crates/nexora-core/src/config/: mod.rs
crates/nexora-core/src/events/: mod.rs
crates/nexora-core/src/handler/: mod.rs
crates/nexora-core/src/health/: mod.rs
crates/nexora-core/src/modules/: mod.rs
crates/nexora-core/src/permissions/: mod.rs
crates/nexora-core/src/plugins/: mod.rs
crates/nexora-core/src/registry/: mod.rs
crates/nexora-core/src/secrets/: mod.rs
crates/nexora-gateway/: Cargo.toml
crates/nexora-gateway/src/: auto_metrics.rs  extended_routes.rs  integration_tests.rs  lib.rs  middleware.rs  rate_limit.rs  routes.rs  server.rs  spec.rs  sso.rs  tracing_middleware.rs
crates/nexora-graphql/: Cargo.toml
crates/nexora-graphql/src/: lib.rs  schema.rs  types.rs
crates/nexora-loadtest/: Cargo.toml
crates/nexora-loadtest/src/: config.rs  lib.rs  result.rs  runner.rs
crates/nexora-marketplace/: Cargo.toml
crates/nexora-marketplace/src/: dependency.rs  handler.rs  install.rs  lib.rs  package.rs  signature.rs  store.rs  update.rs  version.rs
crates/nexora-monitoring/: Cargo.toml
crates/nexora-monitoring/src/: alerts.rs  health.rs  lib.rs  metrics.rs  monitor.rs  prometheus.rs  scheduler.rs
crates/nexora-notifications/: Cargo.toml
crates/nexora-notifications/src/: channel.rs  email.rs  error.rs  handler.rs  lib.rs  message.rs  service.rs  slack.rs  sms.rs  store.rs  types.rs  webhook.rs  webpush.rs
crates/nexora-rules/: Cargo.toml
crates/nexora-rules/src/: action.rs  condition.rs  engine.rs  error.rs  lib.rs  rule.rs
crates/nexora-security/: Cargo.toml
crates/nexora-security/src/: alert.rs  detector.rs  engine.rs  lib.rs  presets.rs  threat.rs
crates/nexora-security/src/policies/: mod.rs
crates/nexora-security/src/reports/: mod.rs
crates/nexora-storage/: Cargo.toml
crates/nexora-storage/migrations/: V1__initial_schema.sql
crates/nexora-storage/src/: billing.rs  events.rs  lib.rs  notifications.rs  packages.rs  pg.rs  pg_stores.rs  schema.rs  tenancy.rs  users.rs  workflows.rs
crates/nexora-storage/src/pg/: audit.rs  billing.rs  events.rs  migrations.rs  mod.rs  packages.rs  pool.rs  secrets.rs  sessions.rs  users.rs
crates/nexora-tenancy/: Cargo.toml
crates/nexora-tenancy/src/: handler.rs  lib.rs  manager.rs  types.rs
crates/nexora-tracing/: Cargo.toml
crates/nexora-tracing/src/: lib.rs  otlp.rs  propagation.rs  span.rs  tracer.rs
crates/nexora-wasm-sandbox/: Cargo.toml
crates/nexora-wasm-sandbox/src/: capabilities.rs  error.rs  lib.rs  manifest.rs  sandbox.rs
crates/nexora-workflow/: Cargo.toml
crates/nexora-workflow/src/: engine.rs  handler.rs  lib.rs  types.rs
crates/nxp-cli/: Cargo.toml
crates/nxp-cli/src/: main.rs
crates/nxp-core/: Cargo.toml
crates/nxp-core/src/: error.rs  flags.rs  frame.rs  lib.rs  opcode.rs  version.rs
crates/nxp-payload/: Cargo.toml
crates/nxp-payload/src/: lib.rs
crates/nxp-security/: Cargo.toml
crates/nxp-security/src/: aead.rs  keys.rs  lib.rs  replay.rs  sign.rs
crates/nxp-session/: Cargo.toml
crates/nxp-session/src/: handshake.rs  lib.rs  manager.rs  time.rs
crates/nxp-transport/: Cargo.toml
crates/nxp-transport/src/: cert.rs  client.rs  conn.rs  lib.rs  server.rs
demo/: Cargo.toml
demo/src/: auth_demo.rs  auth_smoke_test.rs  client.rs  core_demo.rs  core_smoke_test.rs  gateway_demo.rs  server.rs  storage_demo.rs
deploy/helm/nexora/: Chart.yaml  values.yaml
deploy/helm/nexora/templates/: deployments.yaml  hpa.yaml  ingress.yaml  postgres.yaml
docs/: AUTH-RFC-v1.md  CORE-RFC-v1.md  FRONTEND-RFC-v1.md  GATEWAY-RFC-v1.md  MARKETPLACE-RFC-v1.md  NXP-RFC-v1.md  grafana-dashboard.json  otel-collector.yaml  prometheus.yml
frontend/: nginx.conf  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/api/: gateway.ts
frontend/src/lib/charts/: BarChart.svelte  Donut.svelte  Gauge.svelte  Sparkline.svelte
frontend/src/lib/components/: CommandPalette.svelte  Layout.svelte  NotificationBell.svelte  StatCard.svelte
frontend/src/lib/stores/: session.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/about/: +page.svelte
frontend/src/routes/api-explorer/: +page.svelte
frontend/src/routes/audit/: +page.svelte
frontend/src/routes/billing/: +page.svelte
frontend/src/routes/cluster/: +page.svelte
frontend/src/routes/dashboard/: +page.svelte
frontend/src/routes/events/: +page.svelte
frontend/src/routes/health/: +page.svelte
frontend/src/routes/loadtest/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/logout/: +page.svelte
frontend/src/routes/marketplace/: +page.svelte
frontend/src/routes/metrics/: +page.svelte
frontend/src/routes/mfa/: +page.svelte
frontend/src/routes/modules/: +page.svelte
frontend/src/routes/monitoring/: +page.svelte
frontend/src/routes/notifications/: +page.svelte
frontend/src/routes/reports/: +page.svelte
scripts/: docker-build.sh  smoke-test.sh  test_sse.sh
(+11 files in other folders)
