[workspace]
resolver = "2"
members = [
    "crates/nxp-core",
    "crates/nxp-transport",
    "crates/nxp-session",
    "crates/nxp-payload",
    "crates/nxp-security",
    "crates/nexora-core",
    "crates/nexora-auth",
    "crates/nexora-gateway",
    "crates/nexora-marketplace",
    "crates/nexora-billing",
    "crates/nexora-workflow",
    "crates/nexora-storage",
    "crates/nxp-cli",
    "demo",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Nexora Platform Engineering"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/nexora/nexora"
description = "NXP — Nexora Exchange Protocol: binary protocol for the Nexora distributed cloud operating system"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# HTTP gateway (axum — Part 6: external API only via API Gateway)
axum = { version = "0.7", features = ["macros", "http2", "ws"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }

# QUIC transport (Layer 1)
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rcgen = "0.13"
rustls-pemfile = "2.1"

# Serialization (Layer 4)
rmp-serde = "1.3"           # MessagePack
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
cbor = { package = "ciborium", version = "0.2" }

# Cryptography (Layer 2 + Security)
sha2 = "0.10"
hkdf = "0.12"
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
rand = "0.8"
zeroize = { version = "1.8", features = ["derive"] }
hex = "0.4"
base64 = "0.22"

# Logging & observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time
time = { version = "0.3", features = ["serde", "std"] }

# Misc
bytes = "1.7"
parking_lot = "0.12"
once_cell = "1.19"
async-trait = "0.1"
argon2 = "0.5"
uuid = { version = "1.10", features = ["v4"] }
rusqlite = { version = "0.32", features = ["bundled"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1
debug = true
