[package]
name = "nexora-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Nexora Audit Log — comprehensive activity tracking with filtering"

[dependencies]
nxp-core = { path = "../nxp-core" }
nexora-core = { path = "../nexora-core" }
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json = "1.0"
parking_lot.workspace = true
async-trait.workspace = true
uuid.workspace = true
time.workspace = true
regex = "1.10"
