[package]
name = "nexora-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Nexora API Gateway — HTTP ↔ NXP translation layer (Part 6)"

[dependencies]
nxp-core = { path = "../nxp-core" }
nxp-security = { path = "../nxp-security" }
nxp-payload = { path = "../nxp-payload" }
nexora-core = { path = "../nexora-core" }
nexora-auth = { path = "../nexora-auth" }
nexora-marketplace = { path = "../nexora-marketplace" }
nexora-billing = { path = "../nexora-billing" }
nexora-workflow = { path = "../nexora-workflow" }
nexora-cluster = { path = "../nexora-cluster" }
nexora-notifications = { path = "../nexora-notifications" }
nexora-graphql = { path = "../nexora-graphql" }
async-graphql.workspace = true
tokio.workspace = true
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json = "1.0"
rmp-serde.workspace = true
parking_lot.workspace = true
async-trait.workspace = true
bytes.workspace = true
time.workspace = true
hex.workspace = true
