[package]
name = "nexora-loadtest"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Nexora Load Testing — HTTP stress testing harness"

[dependencies]
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json = "1.0"
parking_lot.workspace = true
time.workspace = true
