[package]
name = "nexora-monitoring"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Nexora Monitoring — performance metrics, health probes, alerting"

[dependencies]
nxp-core = { path = "../nxp-core" }
nexora-core = { path = "../nexora-core" }
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json = "1.0"
parking_lot.workspace = true
uuid.workspace = true
time.workspace = true
