[package]
name = "nexora-security"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Nexora Security Engine — threat detection + security alerts"

[dependencies]
nxp-core = { path = "../nxp-core" }
nexora-core = { path = "../nexora-core" }
nexora-audit = { path = "../nexora-audit" }
nexora-notifications = { path = "../nexora-notifications" }
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json = "1.0"
parking_lot.workspace = true
async-trait.workspace = true
uuid.workspace = true
time.workspace = true
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
