[package]
name = "nexora-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Nexora persistent storage — SQLite backend for users, events, packages"

[dependencies]
nxp-core = { path = "../nxp-core" }
nexora-core = { path = "../nexora-core" }
nexora-auth = { path = "../nexora-auth" }
nexora-marketplace = { path = "../nexora-marketplace" }
nexora-billing = { path = "../nexora-billing" }
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json = "1.0"
rmp-serde.workspace = true
parking_lot.workspace = true
rusqlite.workspace = true
uuid.workspace = true
time.workspace = true
hex.workspace = true
