[package]
name = "nexora-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Nexora persistent storage — SQLite (Tier-1) + PostgreSQL (Tier 2/3) backends"

[features]
default = ["sqlite"]
sqlite = ["rusqlite"]
postgres = ["tokio-postgres", "bb8", "bb8-postgres"]

[dependencies]
nxp-core = { path = "../nxp-core" }
nexora-core = { path = "../nexora-core" }
nexora-auth = { path = "../nexora-auth" }
nexora-marketplace = { path = "../nexora-marketplace" }
nexora-billing = { path = "../nexora-billing" }
nexora-workflow = { path = "../nexora-workflow" }
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json = "1.0"
rmp-serde.workspace = true
parking_lot.workspace = true
rusqlite = { workspace = true, optional = true }
tokio-postgres = { version = "0.7", optional = true }
bb8 = { version = "0.8", optional = true }
bb8-postgres = { version = "0.8", optional = true }
uuid.workspace = true
time.workspace = true
hex.workspace = true
