[package]
name = "nexora-tenancy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Nexora Multi-Tenancy — organizations, teams, memberships"

[dependencies]
nxp-core = { path = "../nxp-core" }
nexora-core = { path = "../nexora-core" }
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json = "1.0"
rmp-serde.workspace = true
parking_lot.workspace = true
async-trait.workspace = true
uuid.workspace = true
time.workspace = true
hex.workspace = true
