[package]
name = "nexora-tracing"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Nexora Distributed Tracing — OpenTelemetry-style span tracking"

[dependencies]
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json = "1.0"
parking_lot.workspace = true
uuid.workspace = true
time.workspace = true
