[package]
name = "nexora-wasm-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Nexora WASM plugin sandbox — secure runtime for user-supplied modules (Part 9)"

[dependencies]
nxp-core = { path = "../nxp-core" }
nexora-core = { path = "../nexora-core" }
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json = "1.0"
parking_lot.workspace = true
uuid.workspace = true
time.workspace = true
wasmtime.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
