[package]
name = "nxp-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NXP command-line interface"

[[bin]]
name = "nxp"
path = "src/main.rs"

[dependencies]
nxp-core = { path = "../nxp-core" }
nxp-transport = { path = "../nxp-transport" }
nxp-session = { path = "../nxp-session" }
nxp-security = { path = "../nxp-security" }
nxp-payload = { path = "../nxp-payload" }
tokio.workspace = true
clap = { version = "4.5", features = ["derive"] }
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json = "1.0"
hex.workspace = true
anyhow.workspace = true
bytes.workspace = true
time = { workspace = true, features = ["formatting"] }
