[package]
name = "nxp-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NXP core: frames, opcodes, errors, and protocol primitives"

[dependencies]
bytes.workspace = true
serde.workspace = true
serde_bytes.workspace = true
rmp-serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
time.workspace = true
zeroize.workspace = true
hex.workspace = true
